--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Document</title>
 </head>
 <body>
-  <h1>Üdvözöllek a Kódban wgtfegfsegfpwerg er8tgwerp7tgearü9tg!</h1>
+  <h1>Üdvözöllek a Kódban!</h1>
     
 </body>
 </html>
